# mancala

./: .gitignore  README.MD  pyproject.toml  requirements.txt  run.py  tox.ini
mancala/: __init__.py  board.py  gymlike_env.py  nodes.py  play.py
mancala/utils/: __init__.py  errors.py  functions.py
monazco/: __init__.py  board.py  constants.py  gymlike_env.py  nodes.py  play.py
monazco/utils/: functions.py
tests/: test_board.py  test_dimple.py  test_gymlike_env.py
