[tool.poetry]
name = "mancala"
version = "0.1.0"
description = "gym-like enviornment for the game Mancala, as well as the option to run in the terminal"
authors = ["Charlie <CharlieJackGaynor@Gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include="mancala"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']